fix: add a blank line for better readability in index.html

--- a/Styles/style-catalogue.css
+++ b/Styles/style-catalogue.css
@@ -1,14 +1,108 @@
-/* #titre {
-    background-color: #1b3c7d;
-    height: 170px;
+body{
+
+    margin: 0;
+    padding: 0;
+    background-color:  #f9f8f5;
+    
+    
+}
+
+
+
+/*Debut CSS du header*/
+
+/* 
+header{
+
+    height: 65px;
+    background-color: #f9f8f5;
+    opacity: 0.96;
+    display: flex;
+    align-items: center; /* pour centrer tous les ellement sur Y dans le header*/
+    /* position: sticky;
+    width: 100%; */
+    /* top: 0;
+    z-index: 1000; /* c'est pour que le header reste visible au deçu des autres ellements*/
+    
+    
+    
+
+#logo{ 
+
+    width: 35px; 
+    height: 25px; /*dimenssioné le logo*/
+}
+
+
+/* #titre_logo{
+
+    margin-left: 5px;
+    color: transparent;
+    background: linear-gradient(to right,
+
+    #053094 0%,
+    #0a3aaa 30%,
+    #4e6394 55%,
+    #d1a665 70%,
+    #e6af27 85%,
+    #fabf0d 100% 
+    );
+
+    background-clip: text;
+
+
+}
+ */
+
+#content_logo{ /* c'est pour la div qui contient l'ensemble du logo*/
+
+    display: flex;
     align-items: center;
+    margin-left: 30px;
+    
+}
+
+#content_lien_header{ /*pour la div qui contient les lien (contact, apropos...)*/
+
+    display: flex;
+    justify-content: space-between; /*creer un meme espace entre les lien*/
+    gap: 20px; /* specifié la taille des espace entre les liens*/
+    margin-left: 610px;
+}
+
+.lien_header{ /* pour stylisé les liens*/
+
+    color: #334567;
+    text-decoration: none;
+}
+
+.lien_header:hover{
+
+    color: #efc36c;
+}
+
+
+
+/* Fin CSS du Header*/
+
+
+
+#titre{
+
+    width: 100%;
+    /* background-color: #1b3c7d; */
+    background-color: hsl(220, 70%, 25%);
+    height: 170px;
+    align-items: left;
     display: flex;
     flex-direction: column;
-} */
+    
+    
+}
 
 /* Css zone de filtres de recherche*/
 
-#zone_filtre {
+#zone_filtre{
 
     height: 100px;
     margin-top: 30px;
@@ -16,128 +110,232 @@
     flex-direction: column;
     align-items: center;
     gap: 12px;
-    text-emphasis: none;
 }
 
-#bar_search {
+#bar_search{
 
     width: 1200px;
     height: 35px;
     border-radius: 20px;
     border: solid 1px gray;
-
-
-
+    padding: 10px;
+    
 }
 
-#bar_search:hover {
-    cursor: pointer;
-    color: #999;
-    font-style: italic;
-
-}
-
-#cont_select {
+#cont_select{
 
     width: 1200px;
     display: flex;
     justify-content: space-between;
+    
 }
 
-.select {
+.select{
 
     width: 390px;
     height: 35px;
     border-radius: 20px;
-    border: solid 1px grey;
+    border: solid 1px grey;   
 }
 
 
 /*Css section des livres*/
 
-#liste_livre {
+#liste_livre{
 
-
+    
 
     width: 1200px;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 40px;
+    grid-template-columns: repeat(5,1fr);
+    gap: 30px;
     margin: auto;
-    color: white;
+    
+   
 }
 
-.item_livre {
+.cont_img_livres{
 
-    /* height: 455px;
-    background-color: #e4e4e4e8;
+    height: 270px;
+    overflow: hidden; /* pour que l'image ne depasse pas la div quand elle grossi*/
+    
+}
+
+.img_livres{
+
+    width: 100%;
+    height: 100%;
+    object-fit: cover; 
+
+}
+
+.img_livres:hover{
+
+    transform: scale(1.1); /* c'est pour faire groossir l'image quand la souris la survole*/
+    transition: transform 0.5s ease; /* pour modifier la vitesse de la transformation*/
+}
+
+
+.item_livre{
+
+    height: 450px;
     border-radius: 10px;
-    wid; */
-width:200px;
-height: auto;
-
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;  
+    
 }
 
-.haut_item {
+.item_livre:hover{
 
-    background-color: #133279;
-    height: 85px;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
+   
+   transform: scale(1.02);
+   transition: transform 0.5s ease; 
+    
 }
 
-.type_livre:hover {
-    cursor: pointer;
-    background-color: white;
-    color: #133279;
-    box-shadow: #d39926 0px 0px 10px;
-    border-radius: 5px;
-}
+.haut_item{
 
-.type_livre {
-
-    color: white;
-    background-color: #d39926;
-    border-radius: 5px;
-    margin-bottom: 10px;
-    margin-left: 20px;
-
-}
-
-
-
-.bas_item {
-
-    background-color: #133279;
+    
     height: 90px;
-    margin-top: 270px;
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
+    background-color: white;  
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    
+    
 }
 
-.Auteur {
+.type_livre{
+  
+    text-decoration: none;
+    font-size: 13px;
+    color: black;
+    
+}
+
+.cont_type_livre{
+
+    
+    display: inline-block;
+    border-radius: 12px;
+    padding-right: 10px;
+    padding-left: 10px;
+    background-color: #ebb447;
+    margin-left: 7px;
+    margin-top: 7px;
+    
+}
+
+.type_livre:hover{
+
+    box-shadow: #efc36c 0px 7px 29px 0px;
+}
+
+.nom_livre{
+
+    text-decoration: none;
+    color: black;
+}
+
+.prix{
+
     margin-left: 10px;
-    color: white;
-    text-align: center;
-    margin-top: 25px;
 }
 
-.titre {
+h3{
     margin-left: 10px;
-    color: white;
-    font-size: 18px;
-
 }
 
-.btn_detail {
+.bas_item{
 
-
+    
+    height: 90px;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
     background-color: white;
-    color: #133279;
-    border: none;
-    border-radius: 20px;
-    margin-top: 15px;
-    cursor: pointer;
-    font-size: 16px;
+}
+
+.info_livre{
+
+    font-size: 14px;
+    color: gray;
+    margin-left: 10px;
+}
+
+
+/*Css Du Footer*/
+
+
+#footer{
+
+    height: 250px;
+    width: 100%;
+    background-color:  #f9f8f5;
+    margin-top: 80px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+#footer_l1{
+
+    width: 100%;
+    height: 100px;
+    display: flex;
+    border-bottom: solid 1px gray;
+}
+
+#content_nom{
+
+    width: 35%;
+    height: 100px;
+    display: flex;
+    justify-content: space-evenly;
+    border-right: solid 1px gray;
+  
+}
+
+#content_lien_footer{
+
+   
+    display: flex;
+    width: 35%;
+    margin-left: auto;
+    justify-content: space-around;
+    align-items: center;
 
 }
+
+#footer_l2{
+
+
+    width: 100%;
+    height: 150px;
+    display: flex;
+}
+
+#logo_footer{
+
+    display: flex;
+    align-items: center;
+    margin-left: 30px;
+    height: 150px;
+    width: 45%;
+    border-right: solid 1px gray;
+    
+}
+
+#lien_contact{
+
+    height: 150px;
+    width: 35%;
+    justify-content: space-around;
+    display: flex;
+    align-items: center;
+    margin:auto;
+    
+}
+
+.img_reseaux{
+
+    width: 35px;
+    height: 35px;
+    
+}
+
